Fix Nav spacing on small screens

--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -1,6 +1,7 @@
 /* Normalize */
 blockquote,
 body,
+button,
 figure,
 h1,
 h2,
@@ -16,6 +17,8 @@ ul {
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
+  padding-block: 0;
+  padding-inline: 0;
 }
 
 .button_primary {
